--- a/estudos/html-css/exercicios/ex002/index.html
+++ b/estudos/html-css/exercicios/ex002/index.html
@@ -9,7 +9,22 @@
 <body>
     <h1>Parágrafos e quebras de linha</h1>
     <br>
-    <p>Você pode escrever um parágrafo de qualquer jeito. Basta colocar tudo no meio do par de tags &lt;p&gt; e &lt;/p&gt;</p>
+    <p>Você pode escrever um parágrafo de qualquer jeito. Basta colocar tudo no meio do par de tags &lt;p&gt; e &lt;/p&gt;</p> <!--LESS THAN / GREATER THAN-->
     <p>Se precisar quebrar o texto em algum lugar específico <br> como esse você, pode usar a tag &lt;br&gt;.</p>
+    <p>Vamos adicionar alguns símbolos especiais:
+        &reg;
+        &copy;
+        &trade;
+        &euro;
+        &pound;
+        &yen;
+        &cent;
+        &Delta;
+        &uarr;
+        <p>Vamos adicionar alguns emoji:
+            &#x1F596;
+            &#x1F913;
+        </p>
+    </p>
 </body>
 </html>
