--- a/estudos/html-css/exercicios/ex010/index.html
+++ b/estudos/html-css/exercicios/ex010/index.html
@@ -10,8 +10,14 @@
     <h1>Usando links externos</h1>
     <p>Você pode acessar o meu <a href="https://github.com/rma98/cev-html5-css.git" target="_blank" rel="external">repositório público no GitHub</a></p>
     <p>Você também pode acessar o meu <a href="https://www.facebook.com/robson.albuquerque098" target="_blank" rel="external">Facebook</a></p>
-    <h2>Usando links internos</h2>
+    <h1>Usando links internos</h1>
     <p>Está é a primeira página do site. Se você quiser, pode acessar também a minha <a href="pag002.html" target="_self" rel="next">Segunda página</a></p>
     <p>Você também pode acessar a nossa <a href="noticias/pag003.html" target="_self" rel="next">página de notícias</a></p>
+    <h1>Links para download</h1>
+    <ul>
+        <li><a href="livro/apostila-java-orientacao-objetos.pdf" download="apostila-java-orientacao-objetos.pdf" type="application/pdf">Baixar o livro em PDF</a></li>
+        <li><a href="livro/apostila-java-orientacao-objetos.rar" download="apostila-java-orientacao-objetos.rar" type="app
+            /zip">Livro compactado em ZIP</a></li>
+    </ul>
 </body>
 </html>
