--- a/estudos/html-css/exercicios/ex012/index.html
+++ b/estudos/html-css/exercicios/ex012/index.html
@@ -16,5 +16,7 @@
         <source src="midia/meu-video.ogv" type="video/ogg">
         <p>Seu navegador não tem X-UA-Compatible com reprodução de vídeos.</p>
     </video>-->
+    <h1>Inserindo vídeos do YouTube</h1>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/B3xnyQbRMGQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </body>
 </html>
