Peso, estilo e shorthand font

--- a/estudos/html-css/exercicios/ex017/fonte01.html
+++ b/estudos/html-css/exercicios/ex017/fonte01.html
@@ -18,6 +18,20 @@
             */
             font-size: 1em;
         }
+
+        h1 {
+            /* Short font
+            - font-style -> font-weight - > font-size -> font-family
+            font-family: Arial, sans-serif;
+            font-weight: normal;
+            font-size: 3em;
+            font-style: italic;
+            */
+            font: italic normal 3em "Arial", sans-serif;
+        }
+        h2 {
+            font: bold 2em 'Arial';
+        }
     </style>
 </head>
 <body>
