--- a/estudos/html-css/exercicios/ex019/seletor01.html
+++ b/estudos/html-css/exercicios/ex019/seletor01.html
@@ -10,18 +10,18 @@
 <body>
     <h1 id="principal">Criando Sites com HTML e CSS</h1>
     <h1>Aprendendo HTML</h1>
-    <h2>HTML básico</h2>
+    <h2 class="basico">HTML básico</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe accusantium amet aut eveniet vero eaque vel quisquam incidunt porro non! Aperiam nesciunt maiores pariatur tempore enim, repudiandae omnis libero expedita.</p>
-    <h2>HTML intermediário</h2>
+    <h2 class="intermediario">HTML intermediário</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe accusantium amet aut eveniet vero eaque vel quisquam incidunt porro non! Aperiam nesciunt maiores pariatur tempore enim, repudiandae omnis libero expedita.</p>
-    <h2>HTML avançado</h2>
+    <h2 class="avancado">HTML avançado</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe accusantium amet aut eveniet vero eaque vel quisquam incidunt porro non! Aperiam nesciunt maiores pariatur tempore enim, repudiandae omnis libero expedita.</p>
-    <h1>Aprendendo CSS</h1>
-    <h2>CSS básico</h2>
+    <h1 class="destaque">Aprendendo CSS</h1>
+    <h2 class="basico">CSS básico</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe accusantium amet aut eveniet vero eaque vel quisquam incidunt porro non! Aperiam nesciunt maiores pariatur tempore enim, repudiandae omnis libero expedita.</p>
-    <h2>CSS intermediário</h2>
+    <h2 class="intermediario">CSS intermediário</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe accusantium amet aut eveniet vero eaque vel quisquam incidunt porro non! Aperiam nesciunt maiores pariatur tempore enim, repudiandae omnis libero expedita.</p>
-    <h2>CSS avançado</h2>
+    <h2 class="avancado destaque">CSS avançado</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe accusantium amet aut eveniet vero eaque vel quisquam incidunt porro non! Aperiam nesciunt maiores pariatur tempore enim, repudiandae omnis libero expedita.</p>
 </body>
 </html>
