--- a/estudos/html-css/exercicios/ex021/caixa02.html
+++ b/estudos/html-css/exercicios/ex021/caixa02.html
@@ -19,6 +19,7 @@
         nav {
             background-color: rgb(102, 102, 102);
             padding: 3px;
+            box-shadow: 5px 3px 7px 1px rgb(0, 0, 0, 0.493);
         }
         nav > a {
             text-decoration: none;
@@ -28,6 +29,9 @@
         }
         nav > a:hover {
             text-decoration: underline;
+        }
+        h1 {
+            box-shadow: inset 2px 1px 14px 6px rgb(0, 0, 0, 0.5);
         }
         main {
             background-color: white;
@@ -45,7 +49,10 @@
             background-color: black;
             color: white;
             text-align: center;
-            padding: 1px;
+            padding: 4px;
+            margin: 0px;
+        }
+        footer > p {
             margin: 0px;
         }
     </style>
@@ -54,11 +61,11 @@
     <header>
         <h1>Meu site</h1>
         <nav>
-            <a href="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
+            <a href="#">Link</a>
+            <a href="#">Link</a>
+            <a href="#">Link</a>
+            <a href="#">Link</a>
+            <a href="#">Link</a>
         </nav>
     </header>
     <main>
