Caixas com vértices arrendodados

--- a/estudos/html-css/exercicios/ex021/caixa02.html
+++ b/estudos/html-css/exercicios/ex021/caixa02.html
@@ -19,7 +19,7 @@
         nav {
             background-color: rgb(102, 102, 102);
             padding: 3px;
-            box-shadow: 5px 3px 7px 1px rgb(0, 0, 0, 0.493);
+            box-shadow: 2px 2px 4px 1px rgb(0, 0, 0, 0.315);
         }
         nav > a {
             text-decoration: none;
@@ -37,6 +37,8 @@
             background-color: white;
             padding: 10px;
             margin: 10px;
+            border-radius: 10px 0px;
+            box-shadow: 4px 4px 9px 0px rgb(0, 0, 0, 0.384);
         }
         article {
             background-color: lightgray;
@@ -54,6 +56,13 @@
         }
         footer > p {
             margin: 0px;
+        }
+        div#bola {
+            height: 100ox;
+            width: 100px;
+            margin: 10px;
+            background-color: white;
+            border-radius: 50%;
         }
     </style>
 </head>
@@ -89,5 +98,6 @@
     <footer>
         <p>Desenvolvido pelo CursoemVideo</p>
     </footer>
+    <div id="bola"></div>
 </body>
 </html>
