--- a/estudos/html-css/exercicios/ex021/caixa02.html
+++ b/estudos/html-css/exercicios/ex021/caixa02.html
@@ -64,6 +64,12 @@
             background-color: white;
             border-radius: 50%;
         }
+        /*
+            Borda Personalizada
+            border: 12px solid transparent;
+            padding: 10px
+            border-image: url('borda.png') 27 repeat;
+        */
     </style>
 </head>
 <body>
