dsf006 - tabela003.html

--- a/estudos/html-css/desafios/dsf006/tabela003.html
+++ b/estudos/html-css/desafios/dsf006/tabela003.html
@@ -31,10 +31,6 @@
             background-color: gray;
             color: white;
         }
-        th.nota {
-            background-color: gray;
-            color: white;
-        }
     </style>
 </head>
 <body>
@@ -48,8 +44,8 @@
                 <th scope="col" rowspan="2">Média</th>
             </tr>
             <tr>
-                <th class="nota" scope="col">Nota 01</th>
-                <th class="nota" scope="col">Nota 02</th>
+                <th scope="col">Nota 01</th>
+                <th scope="col">Nota 02</th>
             </tr>
         </thead>
         <tbody>
