--- a/estudos/html-css/exercicios/ex024/iframe002.html
+++ b/estudos/html-css/exercicios/ex024/iframe002.html
@@ -19,7 +19,9 @@
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui illo tenetur corporis rem, cumque dignissimos laudantium autem, dolorum atque, reiciendis eum voluptatem. Nisi magni dignissimos atque aut aperiam quibusdam maxime?</p>
 
-    <iframe src="pag001.html" frameborder="0" height="500" width="500"></iframe>
+    <iframe src="paginas-extras/pag001.html" frameborder="0" height="500" width="500">
+        <p>Infelizmente o seu navegador não é permitido com isso! </p>
+    </iframe>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor voluptatem cupiditate quibusdam cumque non enim quae accusamus at! Facilis ab quos id possimus laudantium assumenda veniam doloremque, tempore nulla beatae.</p>
 </body>
