--- a/estudos/html-css/exercicios/ex024/iframe003.html
+++ b/estudos/html-css/exercicios/ex024/iframe003.html
@@ -27,7 +27,7 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam fugit aut assumenda, sit perspiciatis asperiores. Consequuntur possimus voluptates nam, error alias autem at maxime doloremque nihil modi quaerat tempore veritatis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur impedit fuga consequatur? Perferendis aliquam aperiam ea sed, magnam nisi cum libero quos possimus laboriosam labore vero dolorem dicta. Reiciendis, excepturi!</p>
 
-    <iframe id="tela" name="frame" src="#"> 
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha umda das opções acima</h1><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis excepturi quidem repellat facilis voluptas nam exercitationem odio, odit at ratione voluptates dolorem eos doloremque voluptatem doloribus, quasi explicabo inventore distinctio.</p><img src='imagens/foto.png'>" >
         <p>Infelizmente seu navegador não é compatível com isso.</p>
     </iframe>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis commodi at, animi autem velit beatae illo, reprehenderit, asperiores ipsa illum enim? Sapiente, impedit sint. Delectus at nostrum nam facilis similique! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia nisi libero iusto eligendi molestiae eveniet dolore nesciunt saepe modi natus. Corrupti, enim commodi non eaque asperiores fuga id reprehenderit! Assumenda!</p>
