--- a/estudos/html-css/exercicios/ex026/mq005/index.html
+++ b/estudos/html-css/exercicios/ex026/mq005/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <header>
         <h1>Meu Site</h1>
-        <menu>
+        <i id="burger" class="material-icons" onclick="clickMenu()"> menu</i>
+        <i class="fa-light fa-bars"></i>
+        <menu id="itens">
             <ul>
                 <li><a href="#">Opção 1</a></li>
                 <li><a href="#">Opção 2</a></li>
@@ -27,5 +30,14 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga tenetur voluptates commodi voluptatibus iure nulla quae pariatur, soluta sunt perspiciatis minus aspernatur veritatis delectus doloremque et, perferendis debitis repudiandae ad. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam impedit, amet nesciunt reiciendis non libero? Quasi itaque, cum, hic laboriosam neque minima sapiente beatae dolore officiis atque facilis, quidem id!</p>
         </article>
     </main>
+    <script>
+        function clickMenu() {
+            if (itens.style.display == 'block') {
+                itens.style.display = 'none'
+            } else {
+                itens.style.display = 'block'
+            }
+        }
+    </script>
 </body>
 </html>
